feat(duplicates): refactor duplicate detection to use filter-based queries
- Add VSCode settings configuration file
- Update DuplicatesAnalysis component to handle array responses from backend
- Map backend 'duplicates' field to frontend 'duplicate_count' for consistency
- Refactor getDuplicateDetails to use duplicates_filter parameter instead of log_id
- Transform backend response format to match frontend DuplicateDetail interface
- Update API service methods for duplicate metadata and details retrieval
- Add internationalization strings for duplicate details UI (en and es)
- Update DuplicatesView component to work with new filter-based approach
- Update backend queries router to support new duplicate filtering mechanism
- Add test files for missing dates validation
- Include documentation of changes in CAMBIOS_DUPLICADOS.txt with examples and flow diagrams
This refactoring aligns the frontend and backend to use duplicates_filter for querying duplicate records, improving consistency and maintainability across the application.

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -82,7 +82,10 @@
       "count": "Count",
       "record": "Record",
       "occurrences": "Occurrences",
-      "info": "Duplicates are automatically detected during data processing. This query shows records that appear multiple times in the same publication and date."
+      "info": "Duplicates are automatically detected during data processing. This query shows records that appear multiple times in the same publication and date.",
+      "details": "Duplicate Details",
+      "duplicate": "Duplicate",
+      "noDetails": "No details available"
     },
     "dailyEntries": {
       "title": "Daily Entries",
