chore: clean up temporary files and update data layer configuration
- Remove temporary documentation files (CAMBIOS_BACKEND.txt, CAMBIOS_DUPLICADOS.txt, RESUMEN_FINAL.txt)
- Remove test scripts (test_missing_dates.py, test_missing_dates2.py)
- Update delta_data_layer_config.json base_path to /app/delta_lake for consistency
- Update docker-compose.yml environment variables and volume mappings
- Fix API endpoint in frontend services to use correct duplicates_filter parameter
- Update audit router to accept duplicates_filter as query parameter instead of path parameter
- Add Greek (el.json) and update Spanish (es.json) and English (en.json) translations
- Refactor DuplicatesAnalysis component to handle duplicates_filter correctly
- Update datalayer service methods to use duplicates_filter for duplicate detail queries
- Consolidate configuration and remove redundant temporary documentation

--- a/frontend/src/i18n/locales/el.json
+++ b/frontend/src/i18n/locales/el.json
@@ -47,7 +47,23 @@
       "totalMissing": "Σύνολο ελλειπουσών ημερομηνιών: {{count}}",
       "date": "Ημερομηνία",
       "edition": "Έκδοση",
-      "duration": "Διάρκεια"
+      "duration": "Διάρκεια",
+      "analysisType": "Τύπος Ανάλυσης",
+      "uploadFile": "Ανέβασμα Αρχείου",
+      "uploadFileTitle": "Ανάλυση με Αρχείο",
+      "uploadFileSubtitle": "Ανεβάστε ένα αρχείο YAML, JSON ή TXT με τη λίστα ημερομηνιών για επαλήθευση",
+      "fileRequiredMessage": "Παρακαλώ επιλέξτε ένα αρχείο για ανάλυση",
+      "publicationRequired": "Απαιτείται δημοσίευση",
+      "analysisComplete": "Η ανάλυση ολοκληρώθηκε",
+      "foundMessage": "Βρέθηκαν {{count}} ελλείπουσες ημερομηνίες",
+      "analysisError": "Σφάλμα ανάλυσης",
+      "datesRequired": "Απαιτούνται ημερομηνίες",
+      "datesRequiredMessage": "Παρακαλώ επιλέξτε ένα εύρος ημερομηνιών",
+      "rangeAnalysisTitle": "Ανάλυση Εύρους Ημερομηνιών",
+      "allPublications": "Όλες οι δημοσιεύσεις",
+      "analyzeRange": "Ανάλυση Εύρους",
+      "analyzeDates": "Ανάλυση Ημερομηνιών",
+      "resultsTitle": "Αποτελέσματα Ανάλυσης"
     },
     "storageMetadata": {
       "title": "Μεταδεδομένα Αποθήκευσης",
@@ -84,7 +100,30 @@
       "noResults": "Δεν βρέθηκαν διπλότυπα",
       "totalDuplicates": "Σύνολο διπλότυπων: {{count}}",
       "record": "Εγγραφή",
-      "occurrences": "Εμφανίσεις"
+      "occurrences": "Εμφανίσεις",
+      "logId": "ID Καταγραφής",
+      "date": "Ημερομηνία",
+      "edition": "Έκδοση",
+      "uploadedBy": "Ανέβηκε από",
+      "count": "Αριθμός",
+      "dataLoaded": "Δεδομένα φορτώθηκαν",
+      "foundRecords": "Βρέθηκαν {{count}} εγγραφές",
+      "loadError": "Σφάλμα φόρτωσης διπλότυπων",
+      "detailError": "Σφάλμα φόρτωσης λεπτομερειών",
+      "noDetailRecords": "Δεν υπάρχουν εγγραφές λεπτομερειών",
+      "detailTitle": "Λεπτομέρειες Διπλότυπων",
+      "masterTitle": "Λίστα Διπλότυπων",
+      "noData": "Δεν υπάρχουν διαθέσιμα δεδομένα",
+      "useFilters": "Χρησιμοποιήστε φίλτρα για αναζήτηση διπλότυπων",
+      "searchDuplicates": "Αναζήτηση Διπλότυπων",
+      "exportMasterList": "Εξαγωγή κύριας λίστας",
+      "appliedFilter": "Εφαρμοσμένο φίλτρο",
+      "noFilter": "Χωρίς φίλτρο",
+      "title": "Τίτλος",
+      "group": "Ομάδα",
+      "similarity": "Ομοιότητα",
+      "preview": "Προεπισκόπηση",
+      "notAvailable": "Μη διαθέσιμο"
     },
     "dailyEntries": {
       "title": "Ημερήσιες Εγγραφές",
@@ -159,6 +198,7 @@
     "dragFiles": "Σύρετε αρχεία εδώ ή κάντε κλικ για επιλογή",
     "dragFilesActive": "Αφήστε τα αρχεία εδώ",
     "formatRequired": "Απαιτούμενη μορφή",
+    "selectFile": "Επιλογή αρχείου",
     "multipleFiles": "Υποστηρίζονται πολλαπλά αρχεία",
     "maxFileSize": "Μέγιστο 50MB ανά αρχείο",
     "parallelProcessing": "Παράλληλη επεξεργασία",
@@ -229,11 +269,24 @@
     "refresh": "Ανανέωση",
     "download": "Λήψη",
     "upload": "Ανέβασμα",
+    "exportCsv": "Εξαγωγή CSV",
     "back": "Πίσω",
     "next": "Επόμενο",
     "previous": "Προηγούμενο",
     "yes": "Ναι",
-    "no": "Όχι"
+    "no": "Όχι",
+    "all": "Όλα",
+    "from": "από",
+    "to": "έως",
+    "notSpecified": "Δεν καθορίστηκε",
+    "analyzing": "Ανάλυση...",
+    "removeFile": "Αφαίρεση αρχείου",
+    "user": "Χρήστης",
+    "usernamePlaceholder": "Όνομα χρήστη",
+    "allPublications": "Όλες οι δημοσιεύσεις",
+    "dateRange": "Εύρος ημερομηνιών",
+    "searchFilters": "Φίλτρα αναζήτησης",
+    "searching": "Αναζήτηση..."
   },
   "languages": {
     "spanish": "Español",
