feat(frontend): add runtime environment variable injection and date filtering
- Add docker-entrypoint.sh script to inject VITE_API_BASE_URL at runtime in built JavaScript files
- Update frontend Dockerfile to use entrypoint script instead of direct nginx command
- Change docker-compose API_BASE_URL from service hostname to localhost for local development
- Add fallback placeholder __VITE_API_BASE_URL__ in api.ts for runtime injection
- Add startDate and endDate filter fields to en.json and es.json locales
- Add "optional" label translation to both English and Spanish locale files
- Fix getDuplicates response mapping to extract duplicates array from response object
- Fix getDuplicateRecords to return records array directly instead of full response object
- Add CSV export functionality to DailyEntriesView with hierarchical year/month/day structure
- Add Download icon import to DailyEntriesView for export button
- Enables environment-specific API configuration without rebuilding Docker image

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -79,6 +79,8 @@
       "publication": "Publication",
       "selectPublication": "Select a publication",
       "allPublications": "All publications",
+      "startDate": "Start Date",
+      "endDate": "End Date",
       "queryDuplicates": "Query Duplicates",
       "results": "Duplicate Results",
       "noResults": "No duplicates found",
@@ -276,6 +278,7 @@
     "back": "Back",
     "next": "Next",
     "previous": "Previous",
+    "optional": "optional",
     "yes": "Yes",
     "no": "No",
     "all": "All",
