--- a/frontend/src/i18n/locales/es.json
+++ b/frontend/src/i18n/locales/es.json
@@ -79,6 +79,8 @@
       "publication": "Publicación",
       "selectPublication": "Selecciona una publicación",
       "allPublications": "Todas las publicaciones",
+      "startDate": "Fecha Inicial",
+      "endDate": "Fecha Final",
       "queryDuplicates": "Consultar Duplicados",
       "results": "Resultados de Duplicados",
       "noResults": "No se encontraron duplicados",
@@ -276,6 +278,7 @@
     "upload": "Subir",
     "export": "Exportar",
     "exportCsv": "Exportar CSV",
+    "optional": "opcional",
     "back": "Volver",
     "next": "Siguiente",
     "previous": "Anterior",
