fix(i18n): actualizar traducciones y agregar nuevas claves para entidades conocidas

--- a/frontend/src/i18n/locales/el.json
+++ b/frontend/src/i18n/locales/el.json
@@ -119,7 +119,6 @@
       "exportMasterList": "Εξαγωγή κύριας λίστας",
       "appliedFilter": "Εφαρμοσμένο φίλτρο",
       "noFilter": "Χωρίς φίλτρο",
-      "title": "Τίτλος",
       "group": "Ομάδα",
       "similarity": "Ομοιότητα",
       "preview": "Προεπισκόπηση",
@@ -194,6 +193,14 @@
     "selectPublicationFirst": "Παρακαλώ επιλέξτε μια δημοσίευση πριν ανεβάσετε αρχεία",
     "deltaLakePath": "Διαδρομή Delta Lake",
     "entityName": "Όνομα Οντότητας",
+    "entity_flag": "σημαίες",
+    "entity_ship_tons": "τονάζ",
+    "entity_travel_duration": "διάρκεια ταξιδιού",
+    "entity_comodity": "εμπορεύματα",
+    "entity_ship_type": "τύποι πλοίων",
+    "entity_unit": "μονάδες μέτρησης",
+    "entity_port": "λιμάνια",
+    "entity_master_role": "ρόλοι πλοιάρχων",
     "fileUpload": "Ανέβασμα Αρχείων",
     "dragFiles": "Σύρετε αρχεία εδώ ή κάντε κλικ για επιλογή",
     "dragFilesActive": "Αφήστε τα αρχεία εδώ",
@@ -287,6 +294,27 @@
     "dateRange": "Εύρος ημερομηνιών",
     "searchFilters": "Φίλτρα αναζήτησης",
     "searching": "Αναζήτηση..."
+  },
+  "known_entities": {
+    "title": "Γνωστές Οντότητες",
+    "description": "Αναζήτηση γνωστών οντοτήτων στο σύστημα",
+    "searchPlaceholder": "Όνομα οντότητας...",
+    "searchLabel": "Αναζήτηση οντότητας",
+    "typeLabel": "Τύπος οντότητας",
+    "allTypes": "Όλοι οι τύποι",
+    "resultsTitle": "Οντότητες ({{count}})",
+    "clickToSeeDetails": "Κάντε κλικ σε μια οντότητα για λεπτομέρειες",
+    "type": "Τύπος",
+    "records": "Εγγραφές",
+    "noEntitiesFound": "Δεν βρέθηκαν οντότητες",
+    "noEntitiesDesc": "Δεν βρέθηκαν οντότητες που να ταιριάζουν με τα κριτήρια αναζήτησης.",
+    "loadingDetails": "Φόρτωση λεπτομερειών...",
+    "detailsOf": "Λεπτομέρειες του {{name}}",
+    "exportYaml": "Εξαγωγή YAML",
+    "showingRecords": "Εμφάνιση {{count}} εγγραφών για την οντότητα {{name}}.",
+    "noDetailsAvailable": "Δεν υπάρχουν διαθέσιμες λεπτομερείς εγγραφές για αυτήν την οντότητα.",
+    "importantInfo": "Σημαντική πληροφορία:",
+    "infoDescription": "Αυτή η προβολή εμφανίζει όλες τις γνωστές οντότητες που έχουν εισαχθεί στο σύστημα. Μπορείτε να κάνετε αναζήτηση κατά όνομα ή φιλτράρισμα κατά τύπο οντότητας. Ο αριθμός αναφορών υποδεικνύει πόσες φορές εμφανίζεται κάθε οντότητα στα επεξεργασμένα δεδομένα."
   },
   "languages": {
     "spanish": "Español",
