--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -117,7 +117,6 @@
       "exportMasterList": "Export master list",
       "appliedFilter": "Applied filter",
       "noFilter": "No filter",
-      "title": "Title",
       "group": "Group",
       "similarity": "Similarity",
       "preview": "Preview",
@@ -194,6 +193,8 @@
     "deltaLakePath": "Delta Lake Path",
     "entityName": "Entity Name",
     "entity_flag": "flags",
+    "entity_ship_tons": "ship tonnages",
+    "entity_travel_duration": "travel duration",
     "entity_comodity": "commodities",
     "entity_ship_type": "ship types",
     "entity_unit": "measurement units",
@@ -332,6 +333,27 @@
       "noResults": "No processes found",
       "infoMessage": "This query shows information about executed loading and transformation processes."
     }
+  },
+  "known_entities": {
+    "title": "Known Entities",
+    "description": "Query known entities stored in the system",
+    "searchPlaceholder": "Entity name...",
+    "searchLabel": "Search entity",
+    "typeLabel": "Entity type",
+    "allTypes": "All types",
+    "resultsTitle": "Entities ({{count}})",
+    "clickToSeeDetails": "Click on an entity to see its details",
+    "type": "Type",
+    "records": "Records",
+    "noEntitiesFound": "No entities found",
+    "noEntitiesDesc": "No entities match the search criteria.",
+    "loadingDetails": "Loading details...",
+    "detailsOf": "Details of {{name}}",
+    "exportYaml": "Export YAML",
+    "showingRecords": "Showing {{count}} records for entity {{name}}.",
+    "noDetailsAvailable": "No detailed records available for this entity.",
+    "importantInfo": "Important information:",
+    "infoDescription": "This view shows all known entities that have been entered into the system. You can search by name or filter by entity type. The number of references indicates how many times each entity appears in the processed data."
   },
   "login": {
     "subtitle": "Data Ingestion and Analysis System",
