--- a/frontend/src/i18n/locales/es.json
+++ b/frontend/src/i18n/locales/es.json
@@ -117,7 +117,6 @@
       "exportMasterList": "Exportar lista maestra",
       "appliedFilter": "Filtro aplicado",
       "noFilter": "Sin filtro",
-      "title": "Título",
       "group": "Grupo",
       "similarity": "Similitud",
       "preview": "Vista previa",
@@ -194,6 +193,8 @@
     "deltaLakePath": "Ruta en Delta Lake",
     "entityName": "Nombre de Entidad",
     "entity_flag": "nacionalidad",
+    "entity_ship_tons": "tonelajes",
+    "entity_travel_duration": "duración de viaje",
     "entity_comodity": "mercancias",
     "entity_ship_type": "tipos de barcos",
     "entity_unit": "unidades de medida",
@@ -350,6 +351,27 @@
       "noResults": "No se encontraron procesos",
       "infoMessage": "Esta consulta muestra información sobre los procesos de carga y transformación ejecutados en el sistema."
     }
+  },
+  "known_entities": {
+    "title": "Entidades Conocidas",
+    "description": "Consulta las entidades conocidas almacenadas en el sistema",
+    "searchPlaceholder": "Nombre de la entidad...",
+    "searchLabel": "Buscar entidad",
+    "typeLabel": "Tipo de entidad",
+    "allTypes": "Todos los tipos",
+    "resultsTitle": "Entidades ({{count}})",
+    "clickToSeeDetails": "Haz clic en una entidad para ver sus detalles",
+    "type": "Tipo",
+    "records": "Registros",
+    "noEntitiesFound": "No se encontraron entidades",
+    "noEntitiesDesc": "No hay entidades que coincidan con los criterios de búsqueda.",
+    "loadingDetails": "Cargando detalles...",
+    "detailsOf": "Detalles de {{name}}",
+    "exportYaml": "Exportar YAML",
+    "showingRecords": "Mostrando {{count}} registros para la entidad {{name}}.",
+    "noDetailsAvailable": "No hay registros detallados disponibles para esta entidad.",
+    "importantInfo": "Información importante:",
+    "infoDescription": "Esta vista muestra todas las entidades conocidas que han sido ingresadas en el sistema. Puedes buscar por nombre o filtrar por tipo de entidad. El número de referencias indica cuántas veces aparece cada entidad en los datos procesados."
   },
   "login": {
     "subtitle": "Sistema de Ingestión y Análisis de Datos",
