feat(frontend): add processes landing page as new default route
- Create ProcessesView component as new landing page for authenticated users
- Update routing to set /processes as default route instead of /dashboard
- Rename existing /processes route to /processes-dashboard for ProcessDashboardView
- Add i18n translations for processes page in English, Spanish, and Greek
- Update login redirect and authenticated user navigation to /processes
- Add process cards for data ingestion, cleaning, and disambiguation workflows

--- a/frontend/src/i18n/locales/el.json
+++ b/frontend/src/i18n/locales/el.json
@@ -316,6 +316,25 @@
     "importantInfo": "Σημαντική πληροφορία:",
     "infoDescription": "Αυτή η προβολή εμφανίζει όλες τις γνωστές οντότητες που έχουν εισαχθεί στο σύστημα. Μπορείτε να κάνετε αναζήτηση κατά όνομα ή φιλτράρισμα κατά τύπο οντότητας. Ο αριθμός αναφορών υποδεικνύει πόσες φορές εμφανίζεται κάθε οντότητα στα επεξεργασμένα δεδομένα."
   },
+  "processes": {
+    "title": "Διαδικασίες",
+    "subtitle": "Επιλέξτε τη διαδικασία που θέλετε να εκτελέσετε",
+    "ingestion": {
+      "title": "Εισαγωγή δεδομένων",
+      "description": "Φόρτωση και επεξεργασία αρχείων δεδομένων εξαγωγής ή γνωστών οντοτήτων στο σύστημα"
+    },
+    "cleaning": {
+      "title": "Καθαρισμός δεδομένων",
+      "description": "Καθαρισμός και κανονικοποίηση των εισαγόμενων δεδομένων για βελτίωση της ποιότητας και της συνέπειας"
+    },
+    "disambiguation": {
+      "title": "Αποσαφήνιση δεδομένων",
+      "description": "Επίλυση ασαφειών στα δεδομένα για βελτίωση της ακρίβειας των πληροφοριών"
+    },
+    "clickToAccess": "Κάντε κλικ για πρόσβαση",
+    "comingSoon": "Σύντομα",
+    "info": "Κάθε διαδικασία έχει σχεδιαστεί για ένα συγκεκριμένο στάδιο της ροής εργασίας δεδομένων"
+  },
   "languages": {
     "spanish": "Español",
     "english": "English",
