feat(frontend): add CleaningView for historical term disambiguation
- Add CleaningView component for analyzing and normalizing historical terms using text similarity algorithms
- Create comprehensive documentation for CleaningView functionality, configuration, and usage
- Update routing to display CleaningView as full-screen view without sidebar layout
- Add translation keys for cleaning view in Spanish, English, and Greek locales
- Support multiple similarity algorithms (Levenshtein_OCR, Jaro_Winkler, Nilsim_2) with configurable thresholds and gray zones
- Enable data filtering, result export in multiple formats (CSV, ZIP, TXT), and visual progress indicators

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -414,5 +414,50 @@
     "clickToAccess": "Click to access",
     "comingSoon": "Coming Soon",
     "info": "Each process is designed for a specific stage of the data workflow"
+  },
+  "cleaning": {
+    "title": "Historical Terms Disambiguator",
+    "subtitle": "To solve voice and common choice problems, adjust the predefined parameters. To improve common algorithms, combine them without changing the parameters.",
+    "configuration": "Configuration",
+    "fieldToAnalyze": "Field to analyze",
+    "selectField": "Select field",
+    "algorithms": "Algorithms",
+    "selectAlgorithms": "Select algorithms",
+    "approvalThresholds": "Approval thresholds",
+    "thresholdsAutoAdjust": "Gray zones auto-adjust (±0.05)",
+    "grayZones": "Gray zones",
+    "grayZonesAutoCalibrated": "Automatically calculated based on thresholds",
+    "autoCalculated": "Automatically calculated",
+    "filters": "Filters",
+    "noFiltersApplied": "No filters applied yet (Optional)",
+    "addFilter": "Add filter...",
+    "executeAnalysis": "Execute Analysis",
+    "processing": "Processing...",
+    "showConfiguration": "Show Configuration",
+    "currentConfiguration": "Current configuration",
+    "loadedTerms": "Loaded {{count}} unique terms (93,817 occurrences)",
+    "normalizedVoices": "Loaded {{count}} normalized voices (8 entities)",
+    "usingAllVoices": "Using all {{count}} voices from the list (no filters)",
+    "generatingMatrices": "Generating similarity matrices...",
+    "matricesGenerated": "Matrices generated",
+    "results": "Results",
+    "totalOccurrences": "Total occurrences",
+    "matchedPercentage": "Consensus (strict)",
+    "fuzzyMatch": "Consensus + fuzzy",
+    "normalized": "normalized",
+    "uniqueTerms": "Unique terms",
+    "distributionByClassification": "Distribution by classification",
+    "classification": "Classification",
+    "occurrences": "Occurrences",
+    "percentage": "Percentage",
+    "dataPreview": "Data preview",
+    "term": "Term",
+    "downloadResults": "Download results",
+    "downloadCompleteCSV": "Download complete CSV",
+    "downloadAllCSVZIP": "Download all CSV (ZIP)",
+    "downloadTXTReport": "Download TXT report",
+    "emptyStateTitle": "Configure the analysis to begin",
+    "emptyStateDescription": "Select the field to analyze, algorithms and adjust parameters in the configuration panel.",
+    "openConfiguration": "Open Configuration"
   }
 }
