--- a/frontend/src/i18n/locales/es.json
+++ b/frontend/src/i18n/locales/es.json
@@ -432,5 +432,50 @@
     "clickToAccess": "Haz clic para acceder",
     "comingSoon": "Próximamente",
     "info": "Cada proceso está diseñado para una etapa específica del flujo de trabajo de datos"
+  },
+  "cleaning": {
+    "title": "Desambiguador de Términos Históricos",
+    "subtitle": "Para resolver problemas de voces y elecciones comunes trucar con los parámetros ya definidos. Para mejorar algoritmos comunes unirlas sin cambiar los parámetros.",
+    "configuration": "Configuración",
+    "fieldToAnalyze": "Campo a analizar",
+    "selectField": "Selecciona el campo",
+    "algorithms": "Algoritmos",
+    "selectAlgorithms": "Selecciona algoritmos",
+    "approvalThresholds": "Umbrales de aprobación",
+    "thresholdsAutoAdjust": "Las zonas grises se ajustan automáticamente (±0.05)",
+    "grayZones": "Zonas grises",
+    "grayZonesAutoCalibrated": "Calculadas automáticamente basadas en los umbrales",
+    "autoCalculated": "Calculado automáticamente",
+    "filters": "Filtros",
+    "noFiltersApplied": "Aún no aplicaste ningún filtro (Opcional)",
+    "addFilter": "Agregar filtro...",
+    "executeAnalysis": "Ejecutar Análisis",
+    "processing": "Procesando...",
+    "showConfiguration": "Mostrar Configuración",
+    "currentConfiguration": "Configuración actual",
+    "loadedTerms": "Cargados {{count}} términos únicos (93,817 ocurrencias)",
+    "normalizedVoices": "Cargadas {{count}} voces normalizadas (8 entidades)",
+    "usingAllVoices": "Usando todas las {{count}} voces de la lista (sin filtros)",
+    "generatingMatrices": "Generando matrices de similitud...",
+    "matricesGenerated": "Matrices generadas",
+    "results": "Resultados",
+    "totalOccurrences": "Total ocurrencias",
+    "matchedPercentage": "Consensuado (estricto)",
+    "fuzzyMatch": "Consensuado + fuzzy",
+    "normalized": "normalizado",
+    "uniqueTerms": "Términos únicos",
+    "distributionByClassification": "Distribución por clasificación",
+    "classification": "Clasificación",
+    "occurrences": "Ocurrencias",
+    "percentage": "Porcentaje",
+    "dataPreview": "Vista previa de datos",
+    "term": "Término",
+    "downloadResults": "Descargar resultados",
+    "downloadCompleteCSV": "Descargar CSV completo",
+    "downloadAllCSVZIP": "Descargar todos los CSV (ZIP)",
+    "downloadTXTReport": "Descargar informe TXT",
+    "emptyStateTitle": "Configura el análisis para comenzar",
+    "emptyStateDescription": "Selecciona el campo a analizar, los algoritmos y ajusta los parámetros en el panel de configuración.",
+    "openConfiguration": "Abrir Configuración"
   }
 }
