--- a/frontend/src/i18n/locales/el.json
+++ b/frontend/src/i18n/locales/el.json
@@ -335,6 +335,51 @@
     "comingSoon": "Σύντομα",
     "info": "Κάθε διαδικασία έχει σχεδιαστεί για ένα συγκεκριμένο στάδιο της ροής εργασίας δεδομένων"
   },
+  "cleaning": {
+    "title": "Αποσαφηνιστής Ιστορικών Όρων",
+    "subtitle": "Για την επίλυση προβλημάτων φωνών και κοινών επιλογών, προσαρμόστε τις προκαθορισμένες παραμέτρους. Για τη βελτίωση κοινών αλγορίθμων, συνδυάστε τους χωρίς να αλλάξετε τις παραμέτρους.",
+    "configuration": "Διαμόρφωση",
+    "fieldToAnalyze": "Πεδίο προς ανάλυση",
+    "selectField": "Επιλέξτε πεδίο",
+    "algorithms": "Αλγόριθμοι",
+    "selectAlgorithms": "Επιλέξτε αλγορίθμους",
+    "approvalThresholds": "Όρια έγκρισης",
+    "thresholdsAutoAdjust": "Οι γκρίζες ζώνες προσαρμόζονται αυτόματα (±0.05)",
+    "grayZones": "Γκρίζες ζώνες",
+    "grayZonesAutoCalibrated": "Υπολογίζονται αυτόματα με βάση τα όρια",
+    "autoCalculated": "Υπολογίζεται αυτόματα",
+    "filters": "Φίλτρα",
+    "noFiltersApplied": "Δεν εφαρμόστηκαν φίλτρα ακόμα (Προαιρετικό)",
+    "addFilter": "Προσθήκη φίλτρου...",
+    "executeAnalysis": "Εκτέλεση Ανάλυσης",
+    "processing": "Επεξεργασία...",
+    "showConfiguration": "Εμφάνιση Διαμόρφωσης",
+    "currentConfiguration": "Τρέχουσα διαμόρφωση",
+    "loadedTerms": "Φορτώθηκαν {{count}} μοναδικοί όροι (93.817 εμφανίσεις)",
+    "normalizedVoices": "Φορτώθηκαν {{count}} κανονικοποιημένες φωνές (8 οντότητες)",
+    "usingAllVoices": "Χρήση όλων των {{count}} φωνών από τη λίστα (χωρίς φίλτρα)",
+    "generatingMatrices": "Δημιουργία πινάκων ομοιότητας...",
+    "matricesGenerated": "Οι πίνακες δημιουργήθηκαν",
+    "results": "Αποτελέσματα",
+    "totalOccurrences": "Σύνολο εμφανίσεων",
+    "matchedPercentage": "Συναίνεση (αυστηρή)",
+    "fuzzyMatch": "Συναίνεση + ασαφής",
+    "normalized": "κανονικοποιημένο",
+    "uniqueTerms": "Μοναδικοί όροι",
+    "distributionByClassification": "Κατανομή ανά ταξινόμηση",
+    "classification": "Ταξινόμηση",
+    "occurrences": "Εμφανίσεις",
+    "percentage": "Ποσοστό",
+    "dataPreview": "Προεπισκόπηση δεδομένων",
+    "term": "Όρος",
+    "downloadResults": "Λήψη αποτελεσμάτων",
+    "downloadCompleteCSV": "Λήψη πλήρους CSV",
+    "downloadAllCSVZIP": "Λήψη όλων των CSV (ZIP)",
+    "downloadTXTReport": "Λήψη αναφοράς TXT",
+    "emptyStateTitle": "Διαμορφώστε την ανάλυση για να ξεκινήσετε",
+    "emptyStateDescription": "Επιλέξτε το πεδίο προς ανάλυση, αλγορίθμους και προσαρμόστε τις παραμέτρους στον πίνακα διαμόρφωσης.",
+    "openConfiguration": "Άνοιγμα Διαμόρφωσης"
+  },
   "languages": {
     "spanish": "Español",
     "english": "English",
